modified button in navbar, now with green background when hovering over

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -23,7 +23,7 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand" aria-current="page" href="../index.html">Inicio</a>
+                        <button class="btn btn-outline-success me-2" type="button"><a class="navbar-brand" aria-current="page" href="../index.html">Inicio</a></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,13 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link buttonOne" aria-current="page" href="comoreservar.html">Como
-                                    reservar?</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="flota.html">Flota</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="condiciones.html">Preguntas Frequentes</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="recorridos.html">Recorridos</a>
-                                <a class="nav-link active buttonOne" aria-current="page" href="contacto.html">Contacto</a>
-                                <a class="nav-link backgroundColorTwo" aria-current="page" href="reservar.html">Reservar</a>
+                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link buttonOne" aria-current="page" href="comoreservar.html">Como
+                                    reservar?</a></button>
+                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link" aria-current="page" href="flota.html">Flota</a></button>
+                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link" aria-current="page" href="condiciones.html">Preguntas Frequentes</a></button>
+                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link" aria-current="page" href="recorridos.html">Recorridos</a></button>
+                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a></button>
+                            <button class="btn btn-outline-success me-2" type="button"><a class="nav-link backgroundColorTwo" aria-current="page" href="reservar.html">Reservar</a></button>
                             </div>
                         </div>
                     </div>
@@ -93,3 +93,4 @@
 </body>
 
 </html>
+
