--- a/index.html
+++ b/index.html
@@ -25,24 +25,33 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand" aria-current="page" href="../index.html">Inicio</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
-                                <a class="nav-link buttonOne" aria-current="page"
-                                    href="html/comoreservar.html">Como
-                                    reservar?</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="html/flota.html">Flota</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="html/condiciones.html">Preguntas Frequentes</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="html/recorridos.html">Recorridos</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="html/contacto.html">Contacto</a>
-                                <a class="nav-link backgroundColorTwo" aria-current="page" href="html/reservar.html">Reservar</a>
+                        <button class="btn btn-outline-success me-2" type="button"><a class="navbar-brand"
+                                aria-current="page" href="../index.html">Inicio</a></button>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                <div class="navbar-nav">
+                                    <button class="btn btn-outline-success me-2" type="button"><a
+                                            class="nav-link" aria-current="page"
+                                            href="html/comoreservar.html">Como
+                                            reservar?</a></button>
+                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
+                                                aria-current="page" href="html/flota.html">Flota</a></button>
+                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
+                                                aria-current="page" href="html/condiciones.html">Preguntas
+                                                Frequentes</a></button>
+                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
+                                                aria-current="page" href="html/recorridos.html">Recorridos</a></button>
+                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
+                                                aria-current="page" href="html/contacto.html">Contacto</a></button>
+                                        <button class="btn btn-outline-success me-2" type="button"><a
+                                                class="nav-link backgroundColorTwo" aria-current="page"
+                                                href="html/reservar.html">Reservar</a></button>
+                                </div>
                             </div>
-                        </div>
                     </div>
                 </nav>
             </div>
@@ -68,26 +77,32 @@
             <h1 class="fontColorOne"> Por que elegirnos?</h1>
             <div class="containerThree">
                 <div class="containerFour">
-                    <img src="img/atencion.jpg" alt="icono de una persona brindando excelente servicio a un cliente" class="imageTwelve">
+                    <img src="img/atencion.jpg" alt="icono de una persona brindando excelente servicio a un cliente"
+                        class="imageTwelve">
                     <h3 class="containerTen">Atencion Personalizada</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, rem?</p>
+                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, rem?
+                    </p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos" class="imageTwelve">
+                    <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos"
+                        class="imageTwelve">
                     <h3 class="containerTen">Flota Moderna</h3>
-                    <p class="containerEleven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima molestiae id dolor ipsam vel
+                    <p class="containerEleven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
+                        molestiae id dolor ipsam vel
                         doloribus.
                     </p>
                 </div>
                 <div class="containerFour">
                     <img src="img/kms.jpg" alt="un icono de una ruta" class="imageTwelve">
                     <h3 class="containerTen">Kilometros Ilimitados</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis deleniti modi natus?</p>
+                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
+                        deleniti modi natus?</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/checkin.jpg" alt="icono de un express check in" class="imageTwelve">
                     <h3 class="containerTen">Check in express</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio magni inventore veniam ducimus
+                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio magni
+                        inventore veniam ducimus
                         sed.
                     </p>
                 </div>
@@ -95,22 +110,27 @@
             <div class="containerThree">
                 <div class="containerFour">
                     <img src="img/entrega.jpg"
-                        alt="icono de un carrito de compras representando la devolución del vehiculo" class="imageTwelve">
+                        alt="icono de un carrito de compras representando la devolución del vehiculo"
+                        class="imageTwelve">
                     <h3 class="containerTen">Entrega/Devolucion en Hotel/Aeropuerto</h3>
-                    <p class="containerEleven">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo velit iusto esse doloremque
+                    <p class="containerEleven">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo
+                        velit iusto esse doloremque
                         rerum
                         eveniet unde quos?</p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional" class="imageTwelve">
+                    <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional"
+                        class="imageTwelve">
                     <h3 class="containerTen">Conductor Adicional</h3>
                     <p class="containerEleven">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem!</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/baby.jpg"
-                        alt="icono de un carrito de bebe representando la silla de infante para el auto" class="imageTwelve">
+                        alt="icono de un carrito de bebe representando la silla de infante para el auto"
+                        class="imageTwelve">
                     <h3 class="containerTen">Silla de Infante</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, est! Laudantium!</p>
+                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, est!
+                        Laudantium!</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/charger.jpg" alt="icono representando un cargador de auto" class="imageTwelve">
