--- a/html/reservar.html
+++ b/html/reservar.html
@@ -25,7 +25,8 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <button class="btn btn-outline-success me-2" type="button"><a class="navbar-brand" aria-current="page" href="../index.html">Inicio</a></button>
+                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link"
+                                aria-current="page" href="../index.html">Inicio</a></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +34,20 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link buttonOne" aria-current="page" href="comoreservar.html">Como
-                                    reservar?</a></button>
-                                    <button class="btn btn-outline-success me-2" type="button"><a class="nav-link buttonOne" aria-current="page" href="flota.html">Flota</a></button>
-                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link buttonOne" aria-current="page" href="condiciones.html">Preguntas Frequentes</a></button>
-                                            <button class="btn btn-outline-success me-2" type="button"><a class="nav-link buttonOne" aria-current="page" href="recorridos.html">Recorridos</a></button>
-                                                <button class="btn btn-outline-success me-2" type="button"><a class="nav-link buttonOne" aria-current="page" href="contacto.html">Contacto</a></button>
-                                                    <button class="btn btn-outline-success me-2" type="button"><a class="nav-link active backgroundColorTwo" aria-current="page" href="reservar.html">Reservar</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="comoreservar.html">Como
+                                        reservar?</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="flota.html">Flota</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="condiciones.html">Preguntas Frequentes</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="recorridos.html">Recorridos</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="contacto.html">Contacto</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                        class="nav-link active backgroundColorTwo" aria-current="page"
+                                        href="reservar.html">Reservar</a></button>
                             </div>
                         </div>
                     </div>
