--- a/index.html
+++ b/index.html
@@ -25,33 +25,32 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <button class="btn btn-outline-success me-2" type="button"><a class="navbar-brand"
+                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link text-center"
                                 aria-current="page" href="../index.html">Inicio</a></button>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                                <div class="navbar-nav">
-                                    <button class="btn btn-outline-success me-2" type="button"><a
-                                            class="nav-link" aria-current="page"
-                                            href="html/comoreservar.html">Como
-                                            reservar?</a></button>
-                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
-                                                aria-current="page" href="html/flota.html">Flota</a></button>
-                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
-                                                aria-current="page" href="html/condiciones.html">Preguntas
-                                                Frequentes</a></button>
-                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
-                                                aria-current="page" href="html/recorridos.html">Recorridos</a></button>
-                                        <button class="btn btn-outline-success me-2" type="button"><a class="nav-link"
-                                                aria-current="page" href="html/contacto.html">Contacto</a></button>
-                                        <button class="btn btn-outline-success me-2" type="button"><a
-                                                class="nav-link backgroundColorTwo" aria-current="page"
-                                                href="html/reservar.html">Reservar</a></button>
-                                </div>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="html/comoreservar.html">Como
+                                        reservar?</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="html/flota.html">Flota</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="html/condiciones.html">Preguntas
+                                        Frequentes</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="html/recorridos.html">Recorridos</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
+                                        aria-current="page" href="html/contacto.html">Contacto</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                        class="nav-link backgroundColorTwo" aria-current="page"
+                                        href="html/reservar.html">Reservar</a></button>
                             </div>
+                        </div>
                     </div>
                 </nav>
             </div>
