--- a/html/contacto.html
+++ b/html/contacto.html
@@ -21,7 +21,7 @@
                 </div>
             </a>
             <div class="navegador" role="navigation">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-xxl">
                     <div class="container-fluid">
                         <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link" aria-current="page" href="../index.html">Inicio</a></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
