--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="imageThree"></div>
             </a>
             <div class="navegador" role="navigation">
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar navbar-expand-xxl">
                     <div class="container-fluid">
                         <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link text-center"
                                 aria-current="page" href="../index.html">Inicio</a></button>
@@ -79,30 +79,25 @@
                     <img src="img/atencion.jpg" alt="icono de una persona brindando excelente servicio a un cliente"
                         class="imageTwelve">
                     <h3 class="containerTen">Atencion Personalizada</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, rem?
+                    <p class="containerEleven">Aspen Rental se distingue por ofrecer un servicio altamente personalizado, adaptándose a las necesidades individuales de cada cliente y proporcionando asesoramiento experto.
                     </p>
                 </div>
                 <div class="containerFour">
                     <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos"
                         class="imageTwelve">
                     <h3 class="containerTen">Flota Moderna</h3>
-                    <p class="containerEleven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
-                        molestiae id dolor ipsam vel
-                        doloribus.
+                    <p class="containerEleven"> Nuestra flota de vehículos de última generación refleja nuestro compromiso con la calidad y la seguridad, ofreciendo a los clientes una experiencia de alquiler con vehículos modernos y tecnológicamente avanzados.
                     </p>
                 </div>
                 <div class="containerFour">
                     <img src="img/kms.jpg" alt="un icono de una ruta" class="imageTwelve">
                     <h3 class="containerTen">Kilometros Ilimitados</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis
-                        deleniti modi natus?</p>
+                    <p class="containerEleven"> En Aspen Rental, todos nuestros vehículos se rentan con kilometraje ilimitado sin cargos adicionales, brindando a los clientes la libertad de disfrutar de sus viajes sin restricciones ni costos sorpresa.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/checkin.jpg" alt="icono de un express check in" class="imageTwelve">
                     <h3 class="containerTen">Check in express</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio magni
-                        inventore veniam ducimus
-                        sed.
+                    <p class="containerEleven">Simplificamos el proceso de alquiler con nuestro servicio de check-in express, permitiendo a los clientes ahorrar tiempo y comenzar su viaje de manera rápida y eficiente.
                     </p>
                 </div>
             </div>
@@ -112,29 +107,25 @@
                         alt="icono de un carrito de compras representando la devolución del vehiculo"
                         class="imageTwelve">
                     <h3 class="containerTen">Entrega/Devolucion en Hotel/Aeropuerto</h3>
-                    <p class="containerEleven">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo
-                        velit iusto esse doloremque
-                        rerum
-                        eveniet unde quos?</p>
+                    <p class="containerEleven">Ofrecemos la conveniencia de la entrega y devolución de vehículos en hoteles y aeropuertos sin costos adicionales, facilitando a nuestros clientes un proceso de alquiler sin complicaciones.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional"
                         class="imageTwelve">
                     <h3 class="containerTen">Conductor Adicional</h3>
-                    <p class="containerEleven">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem!</p>
+                    <p class="containerEleven">Reconociendo la importancia de compartir la experiencia de conducción, en Aspen Rental permitimos conductores adicionales sin costos extras, brindando flexibilidad y colaboración en los viajes.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/baby.jpg"
                         alt="icono de un carrito de bebe representando la silla de infante para el auto"
                         class="imageTwelve">
                     <h3 class="containerTen">Silla de Infante</h3>
-                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, est!
-                        Laudantium!</p>
+                    <p class="containerEleven">Priorizando la seguridad de los más pequeños, proporcionamos sillas de infante de forma gratuita con cada alquiler, garantizando a los clientes una experiencia de viaje segura en familia.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/charger.jpg" alt="icono representando un cargador de auto" class="imageTwelve">
                     <h3 class="containerTen">Cargador de Celular</h3>
-                    <p class="containerEleven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed.</p>
+                    <p class="containerEleven">Pensando en la conectividad, todos nuestros vehículos están equipados con cargadores de celulares, asegurando que los clientes estén siempre conectados y listos para cualquier viaje.</p>
                 </div>
             </div>
         </section>
