--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="Descubre Iguazú, Argentina, con Aspen Car Rental. Experimenta la belleza de la región con nuestro servicio confiable y responsable. Nos enorgullece ofrecer soluciones de alquiler de autos personalizadas y confiables para que tu viaje sea inolvidable">
 
+    <script src="https://kit.fontawesome.com/80a863646c.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -25,8 +26,9 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-xxl">
                     <div class="container-fluid">
-                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link text-center"
-                                aria-current="page" href="../index.html">Inicio</a></button>
+                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                class="navbar-brand nav-link text-center" aria-current="page"
+                                href="../index.html">Inicio</a></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -79,25 +81,33 @@
                     <img src="img/atencion.jpg" alt="icono de una persona brindando excelente servicio a un cliente"
                         class="imageTwelve">
                     <h3 class="containerTen">Atencion Personalizada</h3>
-                    <p class="containerEleven">Aspen Rental se distingue por ofrecer un servicio altamente personalizado, adaptándose a las necesidades individuales de cada cliente y proporcionando asesoramiento experto.
+                    <p class="containerEleven">Aspen Rental se distingue por ofrecer un servicio altamente
+                        personalizado, adaptándose a las necesidades individuales de cada cliente y proporcionando
+                        asesoramiento experto.
                     </p>
                 </div>
                 <div class="containerFour">
                     <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos"
                         class="imageTwelve">
                     <h3 class="containerTen">Flota Moderna</h3>
-                    <p class="containerEleven"> Nuestra flota de vehículos de última generación refleja nuestro compromiso con la calidad y la seguridad, ofreciendo a los clientes una experiencia de alquiler con vehículos modernos y tecnológicamente avanzados.
+                    <p class="containerEleven"> Nuestra flota de vehículos de última generación refleja nuestro
+                        compromiso con la calidad y la seguridad, ofreciendo a los clientes una experiencia de alquiler
+                        con vehículos modernos y tecnológicamente avanzados.
                     </p>
                 </div>
                 <div class="containerFour">
                     <img src="img/kms.jpg" alt="un icono de una ruta" class="imageTwelve">
                     <h3 class="containerTen">Kilometros Ilimitados</h3>
-                    <p class="containerEleven"> En Aspen Rental, todos nuestros vehículos se rentan con kilometraje ilimitado sin cargos adicionales, brindando a los clientes la libertad de disfrutar de sus viajes sin restricciones ni costos sorpresa.</p>
+                    <p class="containerEleven"> En Aspen Rental, todos nuestros vehículos se rentan con kilometraje
+                        ilimitado sin cargos adicionales, brindando a los clientes la libertad de disfrutar de sus
+                        viajes sin restricciones ni costos sorpresa.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/checkin.jpg" alt="icono de un express check in" class="imageTwelve">
                     <h3 class="containerTen">Check in express</h3>
-                    <p class="containerEleven">Simplificamos el proceso de alquiler con nuestro servicio de check-in express, permitiendo a los clientes ahorrar tiempo y comenzar su viaje de manera rápida y eficiente.
+                    <p class="containerEleven">Simplificamos el proceso de alquiler con nuestro servicio de check-in
+                        express, permitiendo a los clientes ahorrar tiempo y comenzar su viaje de manera rápida y
+                        eficiente.
                     </p>
                 </div>
             </div>
@@ -107,35 +117,59 @@
                         alt="icono de un carrito de compras representando la devolución del vehiculo"
                         class="imageTwelve">
                     <h3 class="containerTen">Entrega/Devolucion en Hotel/Aeropuerto</h3>
-                    <p class="containerEleven">Ofrecemos la conveniencia de la entrega y devolución de vehículos en hoteles y aeropuertos sin costos adicionales, facilitando a nuestros clientes un proceso de alquiler sin complicaciones.</p>
+                    <p class="containerEleven">Ofrecemos la conveniencia de la entrega y devolución de vehículos en
+                        hoteles y aeropuertos sin costos adicionales, facilitando a nuestros clientes un proceso de
+                        alquiler sin complicaciones.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional"
                         class="imageTwelve">
                     <h3 class="containerTen">Conductor Adicional</h3>
-                    <p class="containerEleven">Reconociendo la importancia de compartir la experiencia de conducción, en Aspen Rental permitimos conductores adicionales sin costos extras, brindando flexibilidad y colaboración en los viajes.</p>
+                    <p class="containerEleven">Reconociendo la importancia de compartir la experiencia de conducción, en
+                        Aspen Rental permitimos conductores adicionales sin costos extras, brindando flexibilidad y
+                        colaboración en los viajes.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/baby.jpg"
                         alt="icono de un carrito de bebe representando la silla de infante para el auto"
                         class="imageTwelve">
                     <h3 class="containerTen">Silla de Infante</h3>
-                    <p class="containerEleven">Priorizando la seguridad de los más pequeños, proporcionamos sillas de infante de forma gratuita con cada alquiler, garantizando a los clientes una experiencia de viaje segura en familia.</p>
+                    <p class="containerEleven">Priorizando la seguridad de los más pequeños, proporcionamos sillas de
+                        infante de forma gratuita con cada alquiler, garantizando a los clientes una experiencia de
+                        viaje segura en familia.</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/charger.jpg" alt="icono representando un cargador de auto" class="imageTwelve">
                     <h3 class="containerTen">Cargador de Celular</h3>
-                    <p class="containerEleven">Pensando en la conectividad, todos nuestros vehículos están equipados con cargadores de celulares, asegurando que los clientes estén siempre conectados y listos para cualquier viaje.</p>
+                    <p class="containerEleven">Pensando en la conectividad, todos nuestros vehículos están equipados con
+                        cargadores de celulares, asegurando que los clientes estén siempre conectados y listos para
+                        cualquier viaje.</p>
                 </div>
             </div>
         </section>
     </main>
     <hr>
     <footer>
-        <a href="../index.html">
-            <div class="imageEleven">
+        <div class="containerTwelve">
+            <a href="../index.html">
+                <div class="imageEleven">
+                </div>
+            </a>
+            <div class="containerThirdteen">
+                <div class="facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100062966032948" target="_blank"><i
+                            class="fa-brands fa-square-facebook fa-2xl" style="color: #0156e9;"> </i></a>
+                </div>
+                <div class="instagram">
+                    <a href="https://www.instagram.com/aspenrentacar/" target="_blank"><i
+                            class="fa-brands fa-square-instagram fa-2xl" style="color: #c224a5;"></i></a>
+                </div>
+                <div class="whatsapp">
+                    <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #30df33;"></i>
+                </div>
+
             </div>
-        </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
