--- a/html/condiciones.html
+++ b/html/condiciones.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="En Aspen Car Rental, te ofrecemos transparencia y claridad. Descubre nuestras condiciones generales de alquiler y contrato, así como una completa sección de preguntas frecuentes antes, durante y después del alquiler. Preparamos toda la información que necesitas para una experiencia de alquiler de vehículos sin sorpresas. ¡Planifica tu viaje con confianza!">
+    <script src="https://kit.fontawesome.com/80a863646c.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -24,8 +25,9 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-xxl">
                     <div class="container-fluid">
-                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link"
-                                aria-current="page" href="../index.html">Inicio</a></button>
+                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                class="navbar-brand nav-link" aria-current="page"
+                                href="../index.html">Inicio</a></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -38,8 +40,9 @@
                                         reservar?</a></button>
                                 <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
                                         aria-current="page" href="flota.html">Flota</a></button>
-                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link active"
-                                        aria-current="page" href="condiciones.html">Preguntas Frequentes</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                        class="nav-link active" aria-current="page" href="condiciones.html">Preguntas
+                                        Frequentes</a></button>
                                 <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
                                         aria-current="page" href="recorridos.html">Recorridos</a></button>
                                 <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
@@ -117,10 +120,26 @@
     </main>
     <hr>
     <footer>
-        <a href="../index.html">
-            <div class="imageEleven">
+        <div class="containerTwelve">
+            <a href="../index.html">
+                <div class="imageEleven">
+                </div>
+            </a>
+            <div class="containerThirdteen">
+                <div class="facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100062966032948" target="_blank"><i
+                            class="fa-brands fa-square-facebook fa-2xl" style="color: #0156e9;"> </i></a>
+                </div>
+                <div class="instagram">
+                    <a href="https://www.instagram.com/aspenrentacar/" target="_blank"><i
+                            class="fa-brands fa-square-instagram fa-2xl" style="color: #c224a5;"></i></a>
+                </div>
+                <div class="whatsapp">
+                    <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #30df33;"></i>
+                </div>
+
             </div>
-        </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
