--- a/html/recorridos.html
+++ b/html/recorridos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Maximiza tu experiencia en Iguazú y sus alrededores con nuestros recorridos sugeridos. Descubre rutas escénicas y destinos imperdibles mientras disfrutas de tu auto de alquiler de Aspen Car Rental. Explora la belleza de la región a tu propio ritmo y crea recuerdos inolvidables en tu viaje.">
+    <script src="https://kit.fontawesome.com/80a863646c.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -41,8 +42,9 @@
                                         aria-current="page" href="flota.html">Flota</a></button>
                                 <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
                                         aria-current="page" href="condiciones.html">Preguntas Frequentes</a></button>
-                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link active"
-                                        aria-current="page" href="recorridos.html">Recorridos</a></button>
+                                <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                        class="nav-link active" aria-current="page"
+                                        href="recorridos.html">Recorridos</a></button>
                                 <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="nav-link"
                                         aria-current="page" href="contacto.html">Contacto</a></button>
                                 <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
@@ -115,10 +117,26 @@
     </main>
     <hr>
     <footer>
-        <a href="../index.html">
-            <div class="imageEleven">
+        <div class="containerTwelve">
+            <a href="../index.html">
+                <div class="imageEleven">
+                </div>
+            </a>
+            <div class="containerThirdteen">
+                <div class="facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100062966032948" target="_blank"><i
+                            class="fa-brands fa-square-facebook fa-2xl" style="color: #0156e9;"> </i></a>
+                </div>
+                <div class="instagram">
+                    <a href="https://www.instagram.com/aspenrentacar/" target="_blank"><i
+                            class="fa-brands fa-square-instagram fa-2xl" style="color: #c224a5;"></i></a>
+                </div>
+                <div class="whatsapp">
+                    <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #30df33;"></i>
+                </div>
+
             </div>
-        </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
