--- a/html/reservar.html
+++ b/html/reservar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Obtén una cotización personalizada para tu alquiler de auto en Iguazú, Argentina, con el sencillo formulario de cotización de Aspen Car Rental. Planifica tu viaje con presupuesto y descubre nuestras opciones de alquiler de autos adaptadas a tus necesidades. ¡Completa el formulario y comienza a explorar la región con comodidad!">
+    <script src="https://kit.fontawesome.com/80a863646c.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -25,8 +26,9 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-xxl">
                     <div class="container-fluid">
-                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a class="navbar-brand nav-link"
-                                aria-current="page" href="../index.html">Inicio</a></button>
+                        <button class="btn btn-outline-success me-2 buttonOne" type="button"><a
+                                class="navbar-brand nav-link" aria-current="page"
+                                href="../index.html">Inicio</a></button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -126,10 +128,26 @@
     </main>
     <hr>
     <footer>
-        <a href="../index.html">
-            <div class="imageEleven">
+        <div class="containerTwelve">
+            <a href="../index.html">
+                <div class="imageEleven">
+                </div>
+            </a>
+            <div class="containerThirdteen">
+                <div class="facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100062966032948" target="_blank"><i
+                            class="fa-brands fa-square-facebook fa-2xl" style="color: #0156e9;"> </i></a>
+                </div>
+                <div class="instagram">
+                    <a href="https://www.instagram.com/aspenrentacar/" target="_blank"><i
+                            class="fa-brands fa-square-instagram fa-2xl" style="color: #c224a5;"></i></a>
+                </div>
+                <div class="whatsapp">
+                    <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #30df33;"></i>
+                </div>
+
             </div>
-        </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
