deleted all the <br> that I previously had for spacings and styled them accordingly in all the html pages. I also adjusted the background green color in the 'recorridos'button

--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -59,23 +59,20 @@
             <h1 class="fontColorOne spaceOne">Como reservar con Aspen Rent a Car?</h1>
             <div class="containerThree">
                 <div class="containerEight">
-                    <img src="../img/uno.jpg" alt="icono con el numero 1">
-                    <br>
+                    <img src="../img/uno.jpg" alt="icono con el numero 1" class="imageThirdteen">
                     <img src="../img/autonegro.jpg" alt="icono de un auto">
                     <h4><span class="fontColorOne">Nuestra Flota</span></h4>
                     <p>Chequea nuestra flota y decide cual se ajusta a tus necesidades</p>
                 </div>
                 <div class="containerEight">
-                    <img src="../img/dos.jpg" alt="icono con el numero 2">
-                    <br>
+                    <img src="../img/dos.jpg" alt="icono con el numero 2" class="imageThirdteen">
                     <img src="../img/signopregunta.jpg" alt="icono de un signo de pregunta>">
                     <h4><span class="fontColorOne">Condiciones generales y FAQ's</span></h4>
                     <p>Asegurate de leer los Términos y Condiciones generales.</p>
                     <p>Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
                 </div>
                 <div class="containerEight">
-                    <img src="../img/tres.jpg" alt="icono con el numero 3">
-                    <br>
+                    <img src="../img/tres.jpg" alt="icono con el numero 3" class="imageThirdteen">
                     <img src="../img/Calendario.jpg" alt="icono de un calendario">
                     <h4><span class="fontColorOne">Consultar disponibilidad</span></h4>
                     <p>Haz click en Consultar Disponibilidad y completa el formulario con todos los datos solicitados
@@ -85,8 +82,7 @@
                         el pago de tu reserva según condiciones.</p>
                 </div>
                 <div class="containerEight">
-                    <img src="../img/cuatro.jpg" alt="icono con el numero 4">
-                    <br>
+                    <img src="../img/cuatro.jpg" alt="icono con el numero 4" class="imageThirdteen">
                     <img src="../img/tick.jpg" alt="Icono de un tilde">
                     <h4><span class="fontColorOne">Confirmacion de reserva</span></h4>
                     <p>Confirmado el pago, recibirás un correo de confirmación con todos los datos de tu reserva.</p>
