--- a/html/flota.html
+++ b/html/flota.html
@@ -57,8 +57,8 @@
     </header>
     <main>
         <section>
-            <h1 class="fontColorOne">Flota</h1> <br>
-            <h3 class="fontColorThree" id="economico">Económico</h3>
+            <h1 class="fontColorOne spaceOne">Flota</h1>
+            <h3 class="fontColorThree spaceTwo" id="economico">Económico</h3>
             <div class="containerSix">
                 <div class="containerSeven">
                     <img src="../img/Carro.png" alt="foto de un auto" class="imageTwo">
@@ -371,7 +371,7 @@
                     <span>categoria: xxxxxxx</span>
                     <a href="reservar.html"><button>Reservar</button></a>
                 </div>
-                <div class="containerSeven">
+                <div class="containerSeven spaceTwo">
                     <img src="../img/Carro.png" alt="foto de un auto" class="imageTwo">
                     <span>Marca del auto</span>
                     <span>categoria: xxxxxxx</span>
@@ -379,12 +379,6 @@
                 </div>
 
             </div>
-
-            </div>
-
-
-            <br>
-            <br>
             <a href="../Index.html" class="fontColorOne anchorOne">Volver a Pagina de Inicio</a>
         </section>
     </main>
